[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hotel-robot-openenv"
version = "1.0.0"
description = "Hotel Robot Delivery RL Environment with battery management and angry guest system"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "openai==1.30.0",
    "pydantic==2.7.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.openenv]
name = "hotel-robot-openenv"
version = "1.0.0"
entry_point = "env.hotel_env:HotelEnv"
inference_script = "inference.py"